kubernetes/booklogr/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklogr
  namespace: booklogr
spec:
  replicas: 0 # Disabled until it supports no ipv6 
  selector:
    matchLabels:
      app: booklogr
  template:
    metadata:
      labels:
        app: booklogr
    spec:
      containers:
        - name: booklogr-api
          image: mozzo/booklogr:v1.9.0
          ports:
            - containerPort: 5000
        - name: booklogr-web
          image: mozzo/booklogr-web:v1.9.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: booklogr
  namespace: booklogr
spec:
  type: ClusterIP
  selector:
    app: booklogr
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: booklogr
  namespace: booklogr
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`booklogr.eniworks.net`)
    kind: Rule
    services:
    - name: booklogr
      port: 80
      passHostHeader: true
  - match: Host(`booklogr-api.eniworks.net`)
    kind: Rule
    services:
    - name: booklogr
      port: 5000
      passHostHeader: true
